# sysmlpy

./: 404.html  AGENTS.md  CHANGELOG.md  CONTROL_FLOW_STATUS.md  LICENSE  README.md  STATUS.md  TODO-gaps.md  TODO-usability.md  TODO.md  TUTORIAL.md  benchmark_stores.py  gen_loc_plot.py  generate_plantuml_examples.py  index.html  mkdocs.yml  note.txt  pyproject.toml  requirements.txt
BUGREPORT/: BUG_REPORT_FOR_SYSML2PY.md  RESPONSE_TO_BUG_REPORT.md  SYSML2PY_BEHAVIOR_EVALUATION.md  minimal_activity_test.sysml  minimal_state_crash.sysml
BUGREPORT_20260516/: BUG_TRANSITIONS_NOT_EXTRACTED.md  TRANSITIONS_WORKING_WITH_FIXES.md  test_transitions_v0.8.py
CHANGELOG/: index.html
COMPARISON_WITH_PYSYSML2/: index.html
GUARDS/: index.html
PROJECT_SUMMARY/: index.html
STATUS/: index.html
TODO/: index.html
TUTORIAL/: index.html
book/: drone.sysml  drone_view.py
docs/: COMPARISON_WITH_PYSYSML2.md  GUARDS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_V2.md  PROJECT_SUMMARY.md  TUTORIAL.md  index.md  plantuml-reference-analysis.md  quickstart.md  requirements.txt
plantuml-examples/: 01-usage-vs-definition.puml  02-relationships.puml  03-vehicle-structure.puml  04-bw-style.puml  05-requirements.puml  06-interconnection.puml  07-css-styled.puml  07-general-view.puml  08-package-view.puml  09-package-diagram.puml  10-action-flow-view.puml  10-block-definition-view.puml  11-internal-block-diagram.puml  12-parametric-view.puml  12-tree-diagram.puml  13-element-table.puml  13-textual-notation.puml  14-state-transition-view.puml  14-tabular-view.puml  (+3 more)
(+246 files in other folders)
