[build-system]
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sysmlpy"
version = "0.33.2"
description = ""
authors = [{ name = "Jon R. Fox (mycr0ft)", email = "jon.fox@drfox.com" }]
readme = "README.md"
packages = [{ include = "sysmlpy", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
pint = ">=0.24"
pyyaml = ">=6.0"
antlr4-python3-runtime = ">=4.13"
networkx = { version = ">=3.0", optional = true }
kuzu = { version = ">=0.7,<0.12", optional = true }
arrow = "^1.4.0"

[tool.poetry.extras]
graph = ["networkx"]
kuzu = ["kuzu"]

[tool.poetry.scripts]
sysmlpy = "sysmlpy.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"

